tg-web.tf
resource "aws_lb_target_group" "target-group-web" {
  name     = var.tg-web-name
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.vpc.id
  
  health_check {
    path    = "/"
    matcher = "200-299"
    interval = 5
    timeout = 3
    healthy_threshold = 3
    unhealthy_threshold = 5

  }

  depends_on = [aws_lb.alb-web]

  tags = {
    Name = var.tg-web-name
    Owner = var.owner-tag
  }
}

#-----------------------------------------------------
# HTTP 프로토콜 리스너
# default action으로 404 페이지 출력

resource "aws_lb_listener" "myhttp" {
  load_balancer_arn = aws_lb.alb-web.arn
  port              = 80
  protocol          = "HTTP"

  # By default, return a simple 404 page
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.target-group-web.arn
  }

  tags = {
    Owner = var.owner-tag
  }
}
